# PowersortCompetitionWebsite

./: .gitignore  README.md
.github/workflows/: main.yml  rust.yml
backend/: .env  Cargo.toml
backend/SQL scripts/: generate_db_schema.sql
backend/migrations/2024-03-25-194025_create_users/: up.sql
backend/migrations/2024-03-27-234410_create_submissions/: up.sql
backend/migrations/2024-03-27-234410_create_tracka_submissions/: up.sql
backend/migrations/2024-06-18-165904_create_submission_hashes/: up.sql
backend/migrations/2024-06-18-165904_create_tracka_submission_hashes/: down.sql  up.sql
backend/migrations/2024-06-18-194343_create_trackb_submissions/: down.sql  up.sql
backend/py_assets/: Powersort.py  Timsort.py
backend/src/: api.rs  crypto.rs  database.rs  lib.rs  mailer.rs  main.rs  models.rs  python_hook.rs  schema.rs  utils.rs
backend/tests/: api_tests.rs  crypto_tests.rs  mailer_tests.rs  models_tests.rs  regression_tests.rs  utils_tests.rs
frontend/: .env.development  .env.production  components.d.ts  index.html  package-lock.json  package.json  vite.config.js
frontend/py_assets/: Counters.py  Powersort.py  Timsort.py
frontend/py_assets/powersort_timsort/: Powersort.py
frontend/src/: App.vue  filedropper.css  main.js  misc.js  py_webworker.js  style.css  style.css.orig  style.scss  webworker.js
frontend/src/components/: BackendOfflineAlert.vue  FileDropper.vue  FlyweightLeaderboard.vue  HeavyweightLeaderboard.vue  HelloWorld.vue  Leaderboard.vue  MediumweightLeaderboard.vue  PrizeTable.vue  ScatterGraph.vue  TrackACompositionDoughnut.vue  TrackAVideo.vue  TrackBVideo.vue
frontend/src/router/: index.js
frontend/src/views/: AboutA.vue  AboutB.vue  AboutC.vue  AboutView.vue  Home.vue  LogIn.vue  Stats.vue  Submission.vue  TrackA.vue  TrackB.vue  TrackC.vue  Useful.vue
local_submission_validation/: ComputeStats.py
local_submission_validation/py_assets/: Entrypoint.py  Powersort.py  Timsort.py
