[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.2"
actix-web = "4.5.1"
actix-rt = "2.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
diesel = { version = "2.1.4", features = ["postgres", "r2d2"] }
diesel_migrations = "2.1.0"
serde = "1.0.197"
listenfd = "1.0.1"
r2d2 = "0.8.10"
lazy_static = "1.4.0"
dotenv = "0.15.0"
lettre = "0.11.6"
futures = "0.3.30"
chrono = "0.4.38"

[dependencies.pyo3]
version = "0.21.2"
features = ["auto-initialize"]

[profile.release-lto]
inherits = "release"
opt-level = 3
codegen-units = 16
lto = true