[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.8"
actix-web = "4.11.0"
actix-rt = "2.10.0"
actix-cors = "0.7.1"
actix-multipart = "0.6.2"
diesel = { version = "2.2.12", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
serde = "1.0.219"
listenfd = "1.0.2"
r2d2 = "0.8.10"
lazy_static = "1.5.0"
dotenv = "0.15.0"
lettre = "0.11.17"
futures = "0.3.31"
chrono = "0.4.41"
argon2 = "0.5.3"
tempfile = "3.20.0"

[profile.release-lto]
inherits = "release"
opt-level = 3
codegen-units = 16
lto = true

[dev-dependencies]
serde_json = "1.0.148"
serial_test = "3.2.0"
